syntax = "proto3";

package proto;

option go_package = "../proto";



message CreatePlaylistRequest{
	string apiKey = 1;
	string accessToken = 2;
	string playlistName = 3;
	string description = 4;
	bool isPublic = 5;
	string userID = 6;
}

message CreatePlaylistResponse {
	string spotifyPlaylistID = 1;
	string externalURL = 2;
	string name = 3;
}

message CreateMelonTop100Request {
	string apiKey = 1;
	string accessToken = 2;
	string userID = 3;
	string playlistID = 4;
}

message CreateMelonTop100Response {
	string status = 1;
}

message SaveMelonTop100DBRequest {
	string apiKey = 1;
	string accessToken = 2;
}

message SaveMelonTop100DBResponse {
	string status = 1;
}

message MissedTrack {
	int32 rank = 1;
	string title = 2;
	string artist = 3;
	string date = 4;
}

message GetMissedTracksRequest {
	string apiKey = 1;
	string accessToken = 2;
	string date = 3;
}

message GetMissedTrackResponse {
	repeated MissedTrack missedTracks = 1;
}

message ResolvedTrack {
	int32 rank = 1;
	string missed_title = 2;
	string missed_artist = 3;
	string title = 4;
	string artist = 5;
	string date = 6;
}

message ResolveMissedTracksRequest {
	string apiKey = 1;
	string accessToken = 2;
	repeated ResolvedTrack resolvedTracks = 3;
}

message ResolveMissedTracksResponse {
	string status = 1;
}

service PlaylistService {
	rpc CreatePlaylist(CreatePlaylistRequest) returns (CreatePlaylistResponse);
	rpc CreateMelonTop100(CreateMelonTop100Request) returns (CreateMelonTop100Response);
	rpc SaveMelonTop100DB(SaveMelonTop100DBRequest) returns (SaveMelonTop100DBResponse);
	rpc GetMissedTracks(GetMissedTracksRequest) returns (GetMissedTrackResponse);
	rpc ResolveMissedTracks(ResolveMissedTracksRequest) returns (ResolveMissedTracksResponse);
}
